--- a/package.json
+++ b/package.json
@@ -2,13 +2,22 @@
   "name": "git-select",
   "version": "1.0.0",
   "description": "",
-  "main": "gitSelect.js",
+  "main": "src/main.js",
+  "bin": {
+    "git-select": "bin/git-select"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup -c"
   },
   "author": "JonathanUsername",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^3.0.1"
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "git-select": "^1.0.0",
+    "global": "^4.3.1",
+    "inquirer": "^3.0.1",
+    "rollup-plugin-babel": "^2.7.1"
   }
 }
