--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "author": "JonathanUsername",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "git-select": "^1.0.0",
     "global": "^4.3.1",
-    "inquirer": "^3.0.1",
     "rollup-plugin-babel": "^2.7.1"
+  },
+  "dependencies": {
+    "inquirer": "^3.0.1"
   }
 }
