--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "git-select",
   "version": "1.0.4",
-  "description": "",
+  "description": "Quickly select recently used git branches",
   "main": "src/main.js",
   "bin": {
     "git-select": "bin/git-select"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JonathanUsername/git-select"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
