--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "rollup-plugin-babel": "^2.7.1"
   },
   "dependencies": {
+    "chalk": "^1.1.3",
     "inquirer": "^3.0.1",
+    "moment": "^2.17.1",
     "nodegit": "^0.17.0"
   }
 }
