--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "rollup-plugin-babel": "^2.7.1"
   },
   "dependencies": {
-    "inquirer": "^3.0.1"
+    "chalk": "^1.1.3",
+    "global": "^4.3.1",
+    "inquirer": "^3.0.1",
+    "moment": "^2.17.1",
+    "rollup": "^0.41.6"
   }
 }
